# ffmpeg_basic

./: .gitignore  0_helloword.cpp  2_remuxing.cpp  3_log.c  4_deleteAndrename.c  5_meta.c  6_audioData.c  7_H264Data.c  CMakeLists.txt  README.md  out.acc
lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
